fixed coolsculpting stretched images

--- a/LandingPages/elite medspa/25_off/style.css
+++ b/LandingPages/elite medspa/25_off/style.css
@@ -437,7 +437,7 @@ img {
 }
 
 .grid51 img {
-    height: 100%;
+    /* height: 100%; */
 }
 
 .grid51 .author {
@@ -490,7 +490,7 @@ img {
 }
 
 .about-img img {
-    height: 100%;
+    /* height: 100%; */
 }
 
 .about-img {
